5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1764_1580.log
== TEST (2019-05-24 10:24:52) 
-- CODE:
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
total = aprovados + reprovados
soma = 0
media = soma/total
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	

print(faltas)
print(aprovados)
print(reprovados)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:25:31) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
total = aprovados + reprovados
soma = 0
media = soma/total
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	

print(faltas)
print(aprovados)
print(reprovados)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:25:56) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
total = aprovados + reprovados
soma = 0
media = soma/total
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	

print(faltas)
print(aprovados)
print(reprovados)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:27:08) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
total = aprovados + reprovados
soma = 0
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	
media = soma/total
print(faltas)
print(aprovados)
print(reprovados)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:28:30) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
total = aprovados + reprovados
soma = 0
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	
#media = soma/total
print(faltas)
print(aprovados)
print(reprovados)
print(soma)
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:29:43) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(soma)
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:31:07) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:31:34) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:32:02) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		else:
			reprovados = reprovados +1
			soma = soma + notas[i]
	else:
		faltas = faltas +1
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:45:16) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		elif(0 <= notas[i] < 6):
			reprovados = reprovados +1
			soma = soma + notas[i]
		elif(notas[i] == max(notas)):	
			nome = estudantes[i]
	else:
		faltas = faltas +1
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:46:09) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
i = 0
while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		elif(0 <= notas[i] < 6):
			reprovados = reprovados +1
			soma = soma + notas[i]
		elif(notas[i] == max(notas)):	
			nome = estudantes[i]
	else:
		faltas = faltas +1
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(nome)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:49:02) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
i = 0

while(i < len(notas)):
	if(notas[i] >= 0):
		if(6 <= notas[i] <= 10):
			aprovados = aprovados +1
			soma = soma + notas[i]
		elif(0 <= notas[i] < 6):
			reprovados = reprovados +1
			soma = soma + notas[i]
		elif(notas[i] == max(notas)):	
			nome = estudantes[i]
			print(nome)
	else:
		faltas = faltas +1
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
#print(nome)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:52:20) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
nome = "a"
i = 0

while(i < len(notas)):
	if(notas[i] == -1):
		faltas = faltas +1
	if(6 <= notas[i] <= 10):
		aprovados = aprovados +1
		soma = soma + notas[i]
	if(0 <= notas[i] < 6):
		reprovados = reprovados +1
		soma = soma + notas[i]
	if(notas[i] == max(notas)):	
		nome = estudantes[i]
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(nome)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:52:56) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
nome = "a"
i = 0

while(i < len(notas)):
	if(notas[i] == -1):
		faltas = faltas +1
	if(6 <= notas[i] <= 10):
		aprovados = aprovados +1
		soma = soma + notas[i]
	if(0 <= notas[i] < 6):
		reprovados = reprovados +1
		soma = soma + notas[i]
	if(notas[i] == max(notas)):	
		nome = estudantes[i]
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(nome)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 16:53:42) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
nome = "a"
i = 0

while(i < len(notas)):
	if(notas[i] == -1):
		faltas = faltas +1
	if(6 <= notas[i] <= 10):
		aprovados = aprovados +1
		soma = soma + notas[i]
	if(0 <= notas[i] < 6):
		reprovados = reprovados +1
		soma = soma + notas[i]
	if(notas[i] == max(notas)):	
		nome = estudantes[i]
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(nome)
	
-- EXECUTION TIME:
0.389353
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:32:09) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
nome = "a"
i = 0

while(i < len(notas)):
	if(notas[i] == -1):
		faltas = faltas +1
	if(6 <= notas[i] <= 10):
		aprovados = aprovados +1
		soma = soma + notas[i]
	if(0 <= notas[i] < 6):
		reprovados = reprovados +1
		soma = soma + notas[i]
	if(notas[i] == max(notas)):	
		nome = estudantes[i]
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(nome)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:33:28) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos estudantes: ")))
estudantes = array(eval(input("Digite os nomes dos estudantes: ")))

faltas = 0
aprovados = 0
reprovados = 0
soma = 0
nome = "a"
i = 0

while(i < size(notas)):
	if(notas[i] == -1):
		faltas = faltas +1
	if(6 <= notas[i] <= 10):
		aprovados = aprovados +1
		soma = soma + notas[i]
	if(0 <= notas[i] < 6):
		reprovados = reprovados +1
		soma = soma + notas[i]
	if(notas[i] == max(notas)):	
		nome = estudantes[i]
	i = i+1	

total = aprovados + reprovados
media = soma/total

print(faltas)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(nome)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
